Adición de un 'favicon'

--- a/pages/plato-7.html
+++ b/pages/plato-7.html
@@ -19,6 +19,9 @@
 	<link rel="preload" href="../media/plato-7/md/hero-image.webp" as="image" media="(min-width: 768px) and (max-width: 1199.98px)" type="image/webp">
 	<link rel="preload" href="../media/plato-7/xl/hero-image.webp" as="image" media="(min-width: 1200px)" type="image/webp">
 
+	<!-- Favicon -->
+	<link rel="icon" href="../media/favicon.png" type="image/png">
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
