--- a/pages/plato-8.html
+++ b/pages/plato-8.html
@@ -19,6 +19,9 @@
 	<link rel="preload" href="../media/plato-8/md/hero-image.webp" as="image" media="(min-width: 768px) and (max-width: 1199.98px)" type="image/webp">
 	<link rel="preload" href="../media/plato-8/xl/hero-image.webp" as="image" media="(min-width: 1200px)" type="image/webp">
 
+	<!-- Favicon -->
+	<link rel="icon" href="../media/favicon.png" type="image/png">
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -84,7 +87,7 @@
 					<p class="title-section__parrafo title-section__parrafo--plato">
 						Un plato de ravioles con <br>
 						tinta de calamar rellenos de <br>
-						champiñones, <i lang="fr">foie</i> y calabacín, <br>
+						champiñones, <em lang="fr">foie</em> y calabacín, <br>
 						inspirado en la cocina italiana.
 					</p>
 					<div>
