--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,6 +16,9 @@
 	<!-- Preloads -->
 	<link rel="preload" href="./css/main.min.css" as="style">
 
+	<!-- Favicon -->
+	<link rel="icon" href="../media/favicon.png" type="image/png">
+
 	<!-- Google Fonts -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
